--- a/src/components/pages/ProjectGrid.css
+++ b/src/components/pages/ProjectGrid.css
@@ -26,3 +26,18 @@
     border-radius: 4px;
   }
   
+  .project-grid-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project-text {
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .project-text a {
+    color: #1a73e8;
+    text-decoration: none;
+  }
