Fixing some bootstrap styling

--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -1,8 +1,10 @@
 .contact-container {
-    background-color: white;
-    padding: 20px;
+    max-width: 90rem;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #f8f9fa;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
   
   .contact-title {
