--- a/src/components/pages/Footer.css
+++ b/src/components/pages/Footer.css
@@ -3,7 +3,8 @@
     bottom: 0;
     right: 0;
     padding: 1rem;
-    background-color: rgba(255, 255, 255, 0); 
+    background-color: rgba(255, 255, 255, 100);
+    border-top-left-radius: 10px; 
   }
   
   .footer a {
