--- a/src/components/pages/Contact.css
+++ b/src/components/pages/Contact.css
@@ -1,12 +1,69 @@
 .contact-container {
-    max-width: 90rem;
-    margin: 0 auto;
-    padding: 2rem;
-    background-color: #f8f9fa;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+  max-width: 90rem;
+  margin: 0 auto;
+  padding: 2rem;
+  background-color: #f8f9fa;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  animation: fadeIn 1s ease-in;
+}
+
+.contact-title {
+  margin-bottom: 20px;
+  text-align: center;
+  font-size: 2.5rem;
+}
+
+.contact-btns {
+  text-align: center;
+}
+
+.email-btn,
+.call-btn {
+  margin: 0 10px;
+  transition: transform 0.3s;
+}
+
+.email-btn:hover,
+.call-btn:hover {
+  transform: scale(1.1);
+}
+
+/* For the form */
+.form-group label {
+  font-weight: bold;
+  color: #333;
+}
+
+.form-group input,
+.form-group textarea {
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.form-group input:focus,
+.form-group textarea:focus {
+  box-shadow: 0 0 5px 2px rgba(0, 123, 255, 0.5);
+}
+
+.submit-btn {
+  display: block;
+  width: 100%;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  transition: background-color 0.3s;
+}
+
+.submit-btn:hover {
+  background-color: #0069d9;
+}
+
+/* Add animation keyframes */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  .contact-title {
-    margin-bottom: 20px;
+  to {
+    opacity: 1;
   }
+}
